--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-size: 1.7rem; /* 放大字体 */
+    font-size: 2.0rem; /* 放大字体 */
   }
 
   .datetime-box span {
@@ -115,7 +115,7 @@
   /* ---------- LOGO 放在日期框下面 ---------- */
   img.logo {
     position: fixed;
-    top: 500px; /* 日期框高度300px + 40px间距 */
+    top: 400px; /* 日期框高度300px + 40px间距 */
     left: 20px;  /* 靠左对齐 */
     width: 270px; /* 按比例放大 */
     height: auto;
@@ -213,6 +213,7 @@ const cardData = [
       [12, "Piang Soe", 8112],
       [13, "Poh", 6317],
       [14, "Chin", 4190],
+      [15, "William", 3370],
       [15, "William", 3370]
     ]
   },
@@ -235,6 +236,7 @@ const cardData = [
       [12, "Edika", 459],
       [13, "Chay", 373],
       [14, "Chin", 85],
+      [15, "William", 0],
       [15, "William", 0]
     ]
   },
